# miller.style

./: .gitignore  CNAME  README.md  example_config.ini  push.py  pyproject.toml
.github/workflows/: deploy-agata.yml  deploy-artur.yml  deploy-miller.yml
agata/static/: styles.css
artur/: CNAME
artur/static/food/: food.css
artur/static/posts/: notes.txt  post_list.json
artur/static/posts/P001/: short.json
artur/static/posts/P003/: post.html
artur/static/posts/P005/: short.json
artur/static/posts/P006/: post.html
artur/static/posts/P007/: post.html  short.json
artur/static/posts/P012/: short.json
artur/static/posts/P017/: short.json
artur/static/posts/P022/: short.json
artur/static/posts/P023/: post.html  short.json
artur/static/posts/P025/: post.html
artur/static/scripts/: main_page.js
artur/static/strength/: strength.css
artur/static/styles/: blog.css  fonts.css  main.css
docs/: CNAME
docs/agata/: index.html
docs/artur/: index.html
docs/artur/static/cds/: generate_cds_html.py
docs/artur/static/chomik/: chomik.css
miller/: inbox-domain-validation.html  index.html
miller/agata/static/: script.js
miller/artur/: blog.html  index.html
static/cv/: cv.js
static/fonts/: fonts.css
static/food/: food.html
static/posts/P001/: post.html
static/posts/P009/: post.html
static/posts/P011/: post.html
static/posts/P019/: short.json
static/posts/P021/: post.html
static/posts/P025/: short.json
static/posts/P026/: short.json
static/scripts/: global.js
static/strength/: generate_strength_html.py
(+59 files in other folders)
